# snitch-rs

./: .gitignore  Cargo.toml  README.md  reset_todos.pl  run  snitch.toml  snitch.toml.example  test.toml
.github/workflows/: ci.yml
src/: cli.rs  config.rs  db.rs  dir.rs  helpers.rs  issue.rs  main.rs  statics.rs  todo.rs
src/commands/: audit.rs  commit.rs  mod.rs  peek.rs  snitch.rs
src/trackers/: github.rs  mod.rs  tracker.rs
test-todos/: base.txt
