[package]
name = "snitchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
comfy-table = "6.1.0"
derivative = "2.2.0"
lazy_static = "1.4.0"
regex = "1"
rand = "0.8"
sqlite = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
threadpool = "1"
