[package]
name = "snitchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
comfy-table = "6.1.0"
derivative = "2.2.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = [ "json"] }
regex = "1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
threadpool = "1"
wiremock = "0.5.17"
async-trait = "0.1.68"
